--- a/src/main/resources/application-prod2.properties
+++ b/src/main/resources/application-prod2.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgres://${POSTGRES_HOST:localhost}:5432/springbootdb
-spring.datasource.username=springbootuser
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:5432/springbootdb
+spring.datasource.username=root
+spring.datasource.password=root
